--- a/htmlSample_1.html
+++ b/htmlSample_1.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Alert Examples</title>
+    <title>Alert Examples!!!</title>
     <meta charset="utf-8">
 </head>
 <body>
-    <h3>Alert examples in VS Code</h3>
+    <h3>Alert examples in VS Code!!!</h3>
         <strong>Success!</strong> This alert box represents a successful or positive action.</br>
         <strong>Info!</strong> This alert box represents a neutral informative change or action.</br>
         <strong>Warning!</strong> This alert box represents a warning that might need attention.</br>
         <strong>Danger!</strong> This alert box represents a dangerous or potentially negative action.</br>
+        <strong>Extreme!</strong> This alert box represents an extreme action.</br>
+        <strong>Catastrophic!</strong> This alert box represents the ship in sinking.</br>
 </body>
 </html>
