--- a/htmlSample_1.html
+++ b/htmlSample_1.html
@@ -12,5 +12,6 @@
         <strong>Danger!</strong> This alert box represents a dangerous or potentially negative action.</br>
         <strong>Extreme!</strong> This alert box represents an extreme action.</br>
         <strong>Catastrophic!</strong> This alert box represents the ship in sinking.</br>
+        <strong>Extinction!</strong> This alert box represents the end has arrived for you project.</br>
 </body>
 </html>
